fix: casing on home page

--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -159,7 +159,7 @@
         <a href="/projects" class="govuk-link">View all projects</a>
       </p>
       
-      <h2 class="govuk-heading-m">Team Objectives</h2>
+      <h2 class="govuk-heading-m">Team objectives</h2>
       <p class="govuk-body">
         The Cross Cutting Technical Services (CCTS) Assurance team provides assurance of Defra's digital delivery so that leaders, teams, and users can be confident in the health and quality of services.
       </p>
@@ -229,7 +229,7 @@
 
   <div class="govuk-grid-row govuk-!-margin-top-6">
     <div class="govuk-grid-column-two-thirds">
-      <h3 class="govuk-heading-s">RAG Status Definitions</h3>
+      <h2 class="govuk-heading-m">RAG status definitions</h2>
       <ul class="govuk-list">
         <li class="govuk-body govuk-!-margin-bottom-2">
           <strong>Red</strong> - Major concerns, delivery is at risk and needs immediate intervention.
