--- a/src/server/projects/detail/views/index.njk
+++ b/src/server/projects/detail/views/index.njk
@@ -11,17 +11,11 @@
 {% from "status-tag.njk" import renderStatusTag %}
 
 {% block beforeContent %}
-  {{ govukBreadcrumbs({
-    items: [
-      {
-        text: "Projects",
-        href: "/projects"
-      },
-      {
-        text: project.name
-      }
-    ]
-  }) }}
+  {% if breadcrumbs and breadcrumbs.length > 1 %}
+    {{ govukBreadcrumbs({
+      items: breadcrumbs
+    }) }}
+  {% endif %}
 {% endblock %}
 
 {% block content %}
