--- a/src/server/delivery-groups-dev/views/index.njk
+++ b/src/server/delivery-groups-dev/views/index.njk
@@ -97,7 +97,7 @@
           {{ govukTable({
             head: [
               {
-                text: "Assessment area"
+                text: "Criteria"
               },
               {
                 text: "RAG status"
