--- a/src/server/delivery-groups-dev/views/index.njk
+++ b/src/server/delivery-groups-dev/views/index.njk
@@ -64,7 +64,7 @@
                 text: "Project name"
               },
               {
-                text: "RAG status"
+                text: "Status"
               }
             ],
             rows: projectRows,
@@ -100,7 +100,7 @@
                 text: "Criteria"
               },
               {
-                text: "RAG status"
+                text: "Status"
               },
               {
                 text: "Commentary"
@@ -119,7 +119,7 @@
       {{ govukTabs({
         items: [
           {
-            label: "Progress",
+            label: "Overview",
             id: "progress",
             panel: {
               html: progressTabContent
