--- a/src/server/admin/index.njk
+++ b/src/server/admin/index.njk
@@ -342,14 +342,14 @@
     
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half">
-        <h3 class="govuk-heading-s">Projects</h3>
-        <p class="govuk-body">Currently {{ projectsCount }} projects loaded</p>
+        <h3 class="govuk-heading-s">Deliveries</h3>
+        <p class="govuk-body">Currently {{ projectsCount }} deliveries loaded</p>
         
         {% if projects and projects.length > 0 %}
           <details class="govuk-details" data-module="govuk-details">
             <summary class="govuk-details__summary">
               <span class="govuk-details__summary-text">
-                View Projects
+                View Deliveries
               </span>
             </summary>
             <div class="govuk-details__text">
