--- a/src/server/common/templates/layouts/page.njk
+++ b/src/server/common/templates/layouts/page.njk
@@ -54,7 +54,7 @@
         <nav aria-label="Service navigation" class="govuk-service-navigation__wrapper">
           <ul class="govuk-service-navigation__list">
             <li class="govuk-service-navigation__item{% if currentPath and currentPath.startsWith('/projects') %} govuk-service-navigation__item--active{% endif %}">
-              <a class="govuk-service-navigation__link" href="/projects">Projects</a>
+              <a class="govuk-service-navigation__link" href="/projects">Deliveries</a>
             </li>
             {% if isAdmin %}
             <li class="govuk-service-navigation__item{% if currentPath and currentPath.startsWith('/admin') %} govuk-service-navigation__item--active{% endif %}">
