--- a/src/server/delivery-groups/views/index.njk
+++ b/src/server/delivery-groups/views/index.njk
@@ -42,7 +42,7 @@
         {{ govukTable({
           head: [
             {
-              text: "Project name"
+              text: "Delivery name"
             },
             {
               text: "RAG status"
@@ -53,7 +53,7 @@
         }) }}
 
       {% else %}
-        <p class="govuk-body">No projects are currently assigned to this delivery group.</p>
+        <p class="govuk-body">No deliveries are currently assigned to this delivery group.</p>
       {% endif %}
     </div>
   </div>
