--- a/src/server/errors/forbidden.njk
+++ b/src/server/errors/forbidden.njk
@@ -21,7 +21,7 @@
       <p class="govuk-body">You can:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>check you're signed in with the correct account</li>
-        <li>go back to the <a href="/projects" class="govuk-link">projects homepage</a></li>
+        <li>go back to the <a href="/projects" class="govuk-link">deliveries homepage</a></li>
         <li><a href="/about" class="govuk-link">contact us</a> if you think you should have access</li>
       </ul>
 
