--- a/src/server/errors/not-found.njk
+++ b/src/server/errors/not-found.njk
@@ -15,8 +15,8 @@
       
       <p class="govuk-body">You can also:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>go back to the <a href="/projects" class="govuk-link">projects homepage</a></li>
-        <li>use the search function to find a specific project</li>
+        <li>go back to the <a href="/projects" class="govuk-link">deliveries homepage</a></li>
+        <li>use the search function to find a specific delivery</li>
         <li><a href="/about" class="govuk-link">contact us</a> if you cannot find what you're looking for</li>
       </ul>
 
