--- a/src/server/errors/server-error.njk
+++ b/src/server/errors/server-error.njk
@@ -16,7 +16,7 @@
       <p class="govuk-body">You can:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>try refreshing the page</li>
-        <li>go back to the <a href="/projects" class="govuk-link">projects homepage</a></li>
+        <li>go back to the <a href="/projects" class="govuk-link">deliveries homepage</a></li>
       </ul>
 
       <div class="govuk-button-group">
