--- a/src/server/projects/manage/views/add-partner.njk
+++ b/src/server/projects/manage/views/add-partner.njk
@@ -11,7 +11,7 @@
   {{ govukBreadcrumbs({
     items: [
       {
-        text: "Projects",
+        text: "Deliveries",
         href: "/projects"
       },
       {
@@ -19,11 +19,11 @@
         href: "/projects/" + project.id
       },
       {
-        text: "Manage project",
+        text: "Manage delivery",
         href: "/projects/" + project.id + "/manage"
       },
       {
-        text: "Update project details",
+        text: "Update delivery details",
         href: "/projects/" + project.id + "/manage/details"
       },
       {
