--- a/src/server/projects/manage/views/details.njk
+++ b/src/server/projects/manage/views/details.njk
@@ -12,18 +12,18 @@
   {{ govukBreadcrumbs({
     items: [
       {
-        text: "Projects",
+        text: "Deliveries",
         href: "/projects"
       },
       {
         text: project.name
       },
       {
-        text: "Manage project",
+        text: "Manage delivery",
         href: "/projects/" + project.id + "/manage"
       },
       {
-        text: "Update project details"
+        text: "Update delivery details"
       }
     ]
   }) }}
