--- a/src/server/projects/manage/views/status.njk
+++ b/src/server/projects/manage/views/status.njk
@@ -13,14 +13,14 @@
   {{ govukBreadcrumbs({
     items: [
       {
-        text: "Projects",
+        text: "Deliveries",
         href: "/projects"
       },
       {
         text: project.name
       },
       {
-        text: "Manage project",
+        text: "Manage delivery",
         href: "/projects/" + project.id + "/manage"
       },
       {
