--- a/src/server/projects/standards/views/archive-assessment.njk
+++ b/src/server/projects/standards/views/archive-assessment.njk
@@ -8,7 +8,7 @@
   {{ govukBreadcrumbs({
     items: [
       {
-        text: "Projects",
+        text: "Deliveries",
         href: "/projects"
       },
       {
@@ -50,7 +50,7 @@
         <h2 class="govuk-heading-m">Assessment Details</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">Project</dt>
+            <dt class="govuk-summary-list__key">Delivery</dt>
             <dd class="govuk-summary-list__value">{{ project.name }}</dd>
           </div>
           <div class="govuk-summary-list__row">
