--- a/src/server/projects/standards/views/assessment-history.njk
+++ b/src/server/projects/standards/views/assessment-history.njk
@@ -9,7 +9,7 @@
   {{ govukBreadcrumbs({
     items: [
       {
-        text: "Projects",
+        text: "Deliveries",
         href: "/projects"
       },
       {
@@ -53,7 +53,7 @@
             Standard {{ standard.number }}: {{ standard.name }}
           </h2>
           <p class="govuk-body-m">
-            Project: <a href="/projects/{{ project.id }}" class="govuk-link">{{ project.name }}</a>
+            Delivery: <a href="/projects/{{ project.id }}" class="govuk-link">{{ project.name }}</a>
           </p>
         </div>
       </div>
