--- a/src/server/projects/standards/views/assessment.njk
+++ b/src/server/projects/standards/views/assessment.njk
@@ -13,7 +13,7 @@
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl">
         {% if isEditMode %}
-          Edit Assessment
+          Edit Update
         {% else %}
           Add Service Standard update
         {% endif %}
