--- a/src/server/projects/standards/views/list.njk
+++ b/src/server/projects/standards/views/list.njk
@@ -62,7 +62,7 @@
       </table>
 
       {{ govukButton({
-        text: "Back to project",
+        text: "Back to delivery",
         href: "/projects/" + project.id,
         classes: "govuk-button--secondary"
       }) }}
