--- a/src/server/projects/add/views/index.njk
+++ b/src/server/projects/add/views/index.njk
@@ -20,14 +20,14 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl">Add new project</h1>
+      <h1 class="govuk-heading-xl">Add new delivery</h1>
     </div>
   </div>
 
   <form method="POST" novalidate>
     {{ govukInput({
       label: {
-        text: "Project name",
+        text: "Delivery name",
         classes: "govuk-label--m"
       },
       id: "name",
@@ -56,7 +56,7 @@
         classes: "govuk-label--m"
       },
       hint: {
-        text: "Project identifier code (optional)"
+        text: "Delivery identifier code (optional)"
       },
       id: "defCode",
       name: "defCode",
@@ -81,7 +81,7 @@
       name: "commentary",
       id: "commentary",
       label: {
-        text: "Project commentary",
+        text: "Delivery commentary",
         classes: "govuk-label--m"
       },
       value: values.commentary,
@@ -90,7 +90,7 @@
     }) }}
 
     {{ govukButton({
-      text: "Add project"
+      text: "Add delivery"
     }) }}
     <a href="/projects" class="govuk-button govuk-button--secondary" role="button">Cancel</a>
   </form>
