--- a/src/server/projects/standards/views/detail.njk
+++ b/src/server/projects/standards/views/detail.njk
@@ -11,7 +11,7 @@
   {{ govukBreadcrumbs({
     items: [
       {
-        text: "Projects",
+        text: "Deliveries",
         href: "/projects"
       },
       {
